:zap: Add Image gif.

--- a/pod/futago.pod
+++ b/pod/futago.pod
@@ -9,6 +9,8 @@ description: Google gemini chat for vim.
 
 Google gemini chat for Vim / Neovim.
 
+![futago](https://github.com/yukimemi/futago.vim/assets/6442108/2a9f13c1-a66f-4170-aba3-e44a417ef5f7)
+
 =head1 Features X<futago-features>
 
 This plugin is a Google gemini chat for Vim / Neovim.
@@ -54,6 +56,7 @@ dvpm.add({ url: "yukimemi/futago.vim" });
 C<:FutagStart>                                                     X<:FutagStart>
 
 Start Futago chat.
+Enter the prompt, save buffer, and the chat will be sent.
 
 =head1 Config X<futago-config>
 
