--- a/pod/futago.pod
+++ b/pod/futago.pod
@@ -53,10 +53,14 @@ dvpm.add({ url: "yukimemi/futago.vim" });
 
 =head1 Commands X<futago-commands>
 
-C<:FutagoStart>                                                   X<:FutagoStart>
+C<:FutagoStart [opener]>                                          X<:FutagoStart>
 
 Start Futago chat.
 Enter the prompt, save buffer, and the chat will be sent.
+
+[opener]: Optional. Default is "tabnew".
+
+Options are "split", "vsplit", "tabnew", "edit", "new", "vnew".
 
 =head1 Config X<futago-config>
 
