--- a/pod/futago.pod
+++ b/pod/futago.pod
@@ -70,11 +70,27 @@ C<g:futago_debug>                                               X<g:futago_debug
 Enable debug messages.
 default is v:false
 
+C<g:futago_chat_path>                                       X<g:futago_chat_path>
+Path to save chat files.
+default is `xdg.cache()/futago/chat`
+
+https://deno.land/x/xdg/src/mod.deno.ts
+
+If you open a past chat file saved in g:futago_chat_path, you can start chatting based on the automatically saved chat history.
+
+C<g:futago_log_file>                                         X<g:futago_log_file>
+Path to save log files.
+default is `xdg.cache()/futago/log`
+
+https://deno.land/x/xdg/src/mod.deno.ts
+
 =head1 Example X<futago-example>
 
 =begin vim
 
 let g:futago_debug = v:true
+let g:futago_chat_path = '~/.cache/vim/futago/chat'
+let g:futago_log_file = '~/.cache/vim/futago/log/futago.log'
 
 =end vim
 
