:zap: Add `FutagoHistory` command to doc.

--- a/pod/futago.pod
+++ b/pod/futago.pod
@@ -62,6 +62,11 @@ Enter the prompt, save buffer, and the chat will be sent.
 
 Options are "split", "vsplit", "tabnew", "edit", "new", "vnew".
 
+C<:FutagoHistory>                                               X<:FutagoHistory>
+
+Show list of backed up files with quickfix.
+If you open a past chat file, you can start chatting based on the automatically saved history.
+
 =head1 Config X<futago-config>
 
 No settings are required. However, the following settings can be made if necessary.
