--- a/pod/futago.pod
+++ b/pod/futago.pod
@@ -64,7 +64,7 @@ Options are "split", "vsplit", "tabnew", "edit", "new", "vnew".
 
 C<:FutagoHistory>                                               X<:FutagoHistory>
 
-Show list of backed up files with quickfix.
+Show list of chat history with quickfix.
 If you open a past chat file, you can start chatting based on the automatically saved history.
 
 =head1 Config X<futago-config>
