:zap: Add `--unstable-kv` flag to docs.

--- a/pod/futago.pod
+++ b/pod/futago.pod
@@ -45,6 +45,15 @@ dvpm.add({ url: "yukimemi/futago.vim" });
 
 =item [vim-denops/denops.vim: 🐜 An ecosystem of Vim/Neovim which allows developers to write cross-platform plugins in Deno](https://github.com/vim-denops/denops.vim)
 
+Using Deno.KV, you need the `--unstable-kv` flag.
+Please specify as below.
+
+=begin vim
+
+let g:denops#server#deno_args = ['-q', '--no-lock', '--unstable-kv', '-A']
+
+=end vim
+
 =item Environment: `GEMINI_API_KEY`
 
 [Get API key](https://ai.google.dev/)
